Fixed viewer errors

--- a/viewer.html
+++ b/viewer.html
@@ -44,8 +44,8 @@
                         <th>Domain</th>
                         <th>Category</th>
                         <th>Keywords</th>
-                        <th>Reminder</th>
                         <th>Added</th>
+                        <!-- <th>Reminder</th> -->
                         <th></th>
                     </tr>
                 </thead>
@@ -66,15 +66,14 @@
                 <td class="domain">—</td>
                 <td class="category">—</td>
                 <td class="keywords">—</td>
-                <td class="reminder">—</td>
                 <td class="added">—</td>
+                <!-- <td class="reminder">—</td> -->
                 <td class="ops">
                     <button data-op="delete" title="Delete">🗑</button>
                 </td>
             </tr>
         </template>
 
-        <!-- Use ES module so top-level await is allowed in the viewer if needed -->
         <script type="module" src="viewer.js"></script>
     </body>
 </html>
